k8s/k8s_thanos/grafana.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
  namespace: monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.2.0
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: provisioning
              mountPath: /etc/grafana/provisioning
              readOnly: true
            - name: grafana-data
              mountPath: /var/lib/grafana
      volumes:
        - name: provisioning
          configMap:
            name: grafana-provisioning
            items:
              - key: datasources.yaml
                path: datasources/datasources.yaml
              - key: dashboards.yaml
                path: dashboards/dashboards.yaml
  volumeClaimTemplates:
    - metadata:
        name: grafana-data
      spec:
        storageClassName: local-storage
        accessModes: [ 'ReadWriteOnce' ]
        resources:
          requests:
            storage: 1Gi
