k8s/k8s_thanos/thanos-compact.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-compact
  namespace: monitoring
spec:
  replicas: 1  #compact的实例数必须是1
  serviceName: thanos-compact
  selector:
    matchLabels:
      app: thanos-compact
  template:
    metadata:
      labels:
        app: thanos-compact
    spec:
      containers:
        - name: thanos
          image: thanosio/thanos:v0.32.1
          args:
            - "compact"
            - "--http-address=0.0.0.0:10909"
            - "--objstore.config-file=/etc/thanos/objstore.yaml"
            - "--data-dir=/data"
            - "--wait"
            - "--retention.resolution-raw=30d"
            - "--retention.resolution-5m=90d"
          ports:
            - name: http
              containerPort: 10909
          volumeMounts:
            - name: data
              mountPath: /data
            - name: objstore-config
              mountPath: /etc/thanos
      volumes:
        - name: objstore-config
          secret:
            secretName: thanos-objstore-config
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: local-storage
        accessModes: [ 'ReadWriteOnce' ]
        resources:
          requests:
            storage: 1Gi
