k8s/k8s_thanos/thanos-query.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-query
  namespace: monitoring
spec:
  replicas: 2
  selector:
    matchLabels:
      app: thanos-query
  template:
    metadata:
      labels:
        app: thanos-query
    spec:
      containers:
        - name: thanos
          image: thanosio/thanos:v0.32.1
          args:
            - "query"
            - "--http-address=0.0.0.0:10904" #http地址
            - "--store=dnssrv+_grpc._tcp.thanos-receiver.monitoring.svc.cluster.local"
            - "--store=dnssrv+_grpc._tcp.thanos-store.monitoring.svc.cluster.local"
            - "--store=dnssrv+_grpc._tcp.thanos-ruler.monitoring.svc.cluster.local"
          ports:
            - name: http
              containerPort: 10904
