k8s/k8s_thanos/alertmanager-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: alertmanager
  ports:
  - name: http
    port: 9093
    targetPort: http
