k8s/k8s_thanos/grafana-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - name: web-backend
      port: 3000
      targetPort: 3000
      protocol: TCP
      nodePort: 30000
