k8s/k8s_thanos/prometheus-alert-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-alert
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: prometheus-alert
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
