k8s/k8s_thanos/thanos-receiver-external-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: thanos-receiver-external
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: thanos-receiver  #选中pod
  ports:
    - name: remote-write
      port: 10903
      targetPort: 10903
      protocol: TCP  #默认就是tcp
      nodePort: 30905      # 手动指定的节点端口（建议30000-32767）
