k8s/k8s_thanos/thanos-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: thanos-receiver
  namespace: monitoring
spec:
  type: ClusterIP  #thanos receiver需要暴漏出去，用ingress实现
  clusterIP: None  # 表示 headless service,默认type是clusterip
  selector:
    app: thanos-receiver  #选中pod
  ports:
    - name: grpc
      port: 10901
    - name: http
      port: 10902
    - name: remote-write
      port: 10903

---
apiVersion: v1
kind: Service
metadata:
  name: thanos-store
  namespace: monitoring
spec:
  clusterIP: None  # 表示 headless service,默认type是clusterip
  selector:
    app: thanos-store  #选中pod
  ports:
    - name: grpc
      port: 10907
    - name: http
      port: 10908

---
apiVersion: v1
kind: Service
metadata:
  name: thanos-ruler
  namespace: monitoring
spec:
  clusterIP: None  # 表示 headless service,默认type是clusterip
  selector:
    app: thanos-ruler  #选中pod
  ports:
    - name: grpc
      port: 10906
    - name: http
      port: 10905

---
apiVersion: v1
kind: Service
metadata:
  name: thanos-query
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: thanos-query
  ports:
    - name: http
      port: 10904  #集群访问的svc 端口
      targetPort: 10904  #容器端口
      nodePort: 30904       # 手动指定的节点端口（建议30000-32767）
