k8s/k8s_thanos/thanos-receiver-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-receiver-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: thanos-receiver.yss.com   #可以用ingress的方式，或者加一个svc来实现
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: thanos-receiver  #headless svc
                port:
                  number: 10903
